--- a/kanseikei.html
+++ b/kanseikei.html
@@ -55,7 +55,7 @@
     </div>
     <p id="display" class="text-center">0</p>
   </div>
-  <audio id="beep" src="https://commons.nicovideo.jp/api/preview/get?cid=238085&content_type=mp3"></audio>
+  <audio id="beep" src="beep.mp3"></audio>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
