--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -56,6 +56,7 @@
     <p id="display" class="text-center">0</p>
   </div>
   <audio id="beep" src="beep.mp3"></audio>
+  <audio id="hato" src="aaa.mp3"></audio>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -70,37 +71,37 @@
   const seconds1 = parseInt(document.getElementById("seconds1").value);
   const seconds2 = parseInt(document.getElementById("seconds2").value);
   repeat = parseInt(document.getElementById("times").value);
-  count1 = seconds1;
-  count2 = seconds2;
+  count1 = seconds1 ;
+  count2 = seconds2 ;
   display.innerHTML = count1;
   timer = setInterval(() => {
     if (count1 > 0) {
       count1--;
       display.innerHTML = count1;
       if (count1 === 0) {
-        beep.play();
+        hato.play();
       }
     } else if (count2 > 0) {
       count2--;
       display.innerHTML = count2;
       if (count2 === 0) {
-        beep.play();
+        hato.play();
       }
     } else {
-      beep.play();
+      
       repeat--;
       if (repeat === 0) {
         stop();
       } else {
-        count1 = seconds1;
-        count2 = seconds2;
+        count1 = seconds1 ;
+        count2 = seconds2 ;
         display.innerHTML = count1;
       }
     }
   }, 1000);
   document.getElementById("start").disabled = true;
   document.getElementById("stop").disabled = false;
-  beep.play(); // 追加
+  hato.play(); // 追加
 }
 
 
