--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -85,7 +85,7 @@
       count2--;
       display.innerHTML = count2;
       if (count2 === 0) {
-        hato.play();
+        beep.play();
       }
     } else {
       
