--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -67,6 +67,10 @@
     let count2;
     let repeat;
     function start() {
+  const formGroup = document.querySelector('.form-group');
+  const buttons = document.querySelector('.text-center');
+  formGroup.style.display = 'none';
+  buttons.style.display = 'none';
   const display = document.getElementById("display");
   const seconds1 = parseInt(document.getElementById("seconds1").value);
   const seconds2 = parseInt(document.getElementById("seconds2").value);
@@ -85,7 +89,7 @@
       count2--;
       display.innerHTML = count2;
       if (count2 === 0) {
-        beep.play();
+        hato.play();
       }
     } else {
       
@@ -110,6 +114,19 @@ clearInterval(timer);
 document.getElementById("start").disabled = false;
 document.getElementById("stop").disabled = true;
 document.getElementById("display").innerHTML = "0";
+
+  clearInterval(timer);
+  document.getElementById("start").disabled = false;
+  document.getElementById("stop").disabled = true;
+  document.getElementById("display").innerHTML = "0";
+
+  // カウントダウンの数字以外の要素を表示する
+  const formGroup = document.querySelector('.form-group');
+  const buttons = document.querySelector('.text-center');
+  formGroup.style.display = 'flex';
+  buttons.style.display = 'block';
+
+
 }
 </script>
 
