--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -62,10 +62,10 @@
     <p id="display" class="text-center">0</p>
     <p id="elapsed" class="text-center">経過時間: 0秒</p>
   </div>
-  <audio id="beep10" src="beep10.mp3"></audio>
-  <audio id="beep20" src="beep20.mp3"></audio>
-  <audio id="beep30" src="beep30.mp3"></audio>
-  <audio id="finish" src="finish.mp3"></audio>
+  <audio id="beep10" src="001_ずんだもん（ノーマル）_10秒前.wav"></audio>
+  <audio id="beep20" src="002_ずんだもん（ノーマル）_20びょうまえ.wav"></audio>
+  <audio id="beep30" src="003_ずんだもん（ノーマル）_30びょうまえ.wav"></audio>
+  <audio id="finish" src="beep.mp3"></audio>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script>
