--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -69,10 +69,10 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script>
-    const beep10 = document.getElementById("beep10");
-    const beep20 = document.getElementById("beep20");
-    const beep30 = document.getElementById("beep30");
-    const finish = document.getElementById("finish");
+    const beep10 = new Audio("beep10");
+    const beep20 = new Audio("beep20");
+    const beep30 = new Audio("beep30");
+    const finish = new Audio("finish");
     let timer;
     let count1;
     let count2;
