--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -1,159 +1,87 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-  <style>
-    .container {
-      margin-top: 50px;
-    }
-    h1 {
-      font-size: 3rem;
-      font-weight: bold;
-    }
-    .form-group {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 30px;
-    }
-    input {
-      width: 100px;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-    }
-    button {
-      font-size: 2rem;
-      font-weight: bold;
-    }
-    #display {
-      font-size: 10rem;
-      font-weight: bold;
-      margin-bottom: 30px;
-    }
-    #elapsed {
-      font-size: 1rem;
-      color: #6c757d;
-      margin-bottom: 20px;
-      opacity: 0.7;
-    }
-    .fa {
-      font-size: 2.5rem;
-      margin-right: 10px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="form-group">
-      <label for="seconds1" class="me-3">秒数1：</label>
-      <input id="seconds1" type="number" value="20" min="1" class="form-control me-3">
-      <label for="seconds2" class="me-3">秒数2：</label>
-      <input id="seconds2" type="number" value="10" min="1" class="form-control me-3">
-      <label for="times" class="me-3">繰り返し：</label>
-      <input id="times" type="number" value="8" min="1" class="form-control">
-    </div>
-    <div class="text-center">
-      <button id="start" class="btn btn-lg btn-primary me-3" onclick="start()"><i class="fas fa-play"></i> スタート</button>
-      <button id="stop" class="btn btn-lg btn-danger" onclick="stop()" disabled><i class="fas fa-stop"></i> ストップ</button>
-    </div>
-    <p id="display" class="text-center">0</p>
-    <p id="elapsed" class="text-center">経過時間: 0秒</p>
-  </div>
-  <audio id="beep10" src="001_ずんだもん（ノーマル）_10秒前.wav"></audio>
-  <audio id="beep20" src="002_ずんだもん（ノーマル）_20びょうまえ.wav"></audio>
-  <audio id="beep30" src="003_ずんだもん（ノーマル）_30びょうまえ.wav"></audio>
-  <audio id="finish" src="beep.mp3"></audio>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-  <script>
-    const beep10 = new Audio("beep10");
-    const beep20 = new Audio("beep20");
-    const beep30 = new Audio("beep30");
-    const finish = new Audio("finish");
-    let timer;
-    let count1;
-    let count2;
-    let repeat;
-    let startTime;
+<script>
+  const beep10 = new Audio("001_ずんだもん（ノーマル）_10秒前.wav");
+  const beep20 = new Audio("002_ずんだもん（ノーマル）_20びょうまえ.wav");
+  const beep30 = new Audio("003_ずんだもん（ノーマル）_30びょうまえ.wav");
+  const finish = new Audio("beep.mp3");
+  let timer;
+  let count1;
+  let count2;
+  let repeat;
+  let startTime;
 
-    function start() {
-      const formGroup = document.querySelector('.form-group');
-      const buttons = document.querySelector('.text-center');
-      formGroup.style.display = 'none';
-      buttons.style.display = 'none';
+  function start() {
+    const formGroup = document.querySelector('.form-group');
+    const buttons = document.querySelector('.text-center');
+    formGroup.style.display = 'none';
+    buttons.style.display = 'none';
 
-      const display = document.getElementById("display");
-      const seconds1 = parseInt(document.getElementById("seconds1").value);
-      const seconds2 = parseInt(document.getElementById("seconds2").value);
-      repeat = parseInt(document.getElementById("times").value);
+    const display = document.getElementById("display");
+    const seconds1 = parseInt(document.getElementById("seconds1").value);
+    const seconds2 = parseInt(document.getElementById("seconds2").value);
+    repeat = parseInt(document.getElementById("times").value);
 
-      count1 = seconds1;
-      count2 = seconds2;
-      display.innerHTML = count1;
+    count1 = seconds1;
+    count2 = seconds2;
+    display.innerHTML = count1;
 
-      startTime = Date.now();
+    startTime = Date.now();
 
-      timer = setInterval(() => {
-        const elapsedTime = Math.floor((Date.now() - startTime) / 1000);
-        document.getElementById("elapsed").innerHTML = `経過時間: ${elapsedTime}秒`;
+    timer = setInterval(() => {
+      const elapsedTime = Math.floor((Date.now() - startTime) / 1000);
+      document.getElementById("elapsed").innerHTML = `経過時間: ${elapsedTime}秒`;
 
-        if (count1 > 0) {
-          count1--;
-          display.innerHTML = count1;
+      if (count1 > 0) {
+        count1--;
+        display.innerHTML = count1;
 
-          if (count1 === 30) {
-            beep30.play();
-          } else if (count1 === 20) {
-            beep20.play();
-          } else if (count1 === 10) {
-            beep10.play();
-          } else if (count1 === 0) {
-            finish.play();
-          }
-        } else if (count2 > 0) {
-          count2--;
-          display.innerHTML = count2;
-
-          if (count2 === 30) {
-            beep30.play();
-          } else if (count2 === 20) {
-            beep20.play();
-          } else if (count2 === 10) {
-            beep10.play();
-          } else if (count2 === 0) {
-            finish.play();
-          }
-        } else {
-          repeat--;
-          if (repeat === 0) {
-            stop();
-          } else {
-            count1 = seconds1;
-            count2 = seconds2;
-            display.innerHTML = count1;
-          }
+        if (count1 === 30) {
+          beep30.play();
+        } else if (count1 === 20) {
+          beep20.play();
+        } else if (count1 === 10) {
+          beep10.play();
+        } else if (count1 === 0) {
+          finish.play();
         }
-      }, 1000);
+      } else if (count2 > 0) {
+        count2--;
+        display.innerHTML = count2;
 
-      document.getElementById("start").disabled = true;
-      document.getElementById("stop").disabled = false;
-    }
+        if (count2 === 30) {
+          beep30.play();
+        } else if (count2 === 20) {
+          beep20.play();
+        } else if (count2 === 10) {
+          beep10.play();
+        } else if (count2 === 0) {
+          finish.play();
+        }
+      } else {
+        repeat--;
+        if (repeat === 0) {
+          stop();
+        } else {
+          count1 = seconds1;
+          count2 = seconds2;
+          display.innerHTML = count1;
+        }
+      }
+    }, 1000);
 
-    function stop() {
-      clearInterval(timer);
-      document.getElementById("start").disabled = false;
-      document.getElementById("stop").disabled = true;
-      document.getElementById("display").innerHTML = "0";
-      document.getElementById("elapsed").innerHTML = "経過時間: 0秒";
+    document.getElementById("start").disabled = true;
+    document.getElementById("stop").disabled = false;
+  }
 
-      const formGroup = document.querySelector('.form-group');
-      const buttons = document.querySelector('.text-center');
-      formGroup.style.display = 'flex';
-      buttons.style.display = 'block';
-    }
-  </script>
-</body>
-</html>
+  function stop() {
+    clearInterval(timer);
+    document.getElementById("start").disabled = false;
+    document.getElementById("stop").disabled = true;
+    document.getElementById("display").innerHTML = "0";
+    document.getElementById("elapsed").innerHTML = "経過時間: 0秒";
+
+    const formGroup = document.querySelector('.form-group');
+    const buttons = document.querySelector('.text-center');
+    formGroup.style.display = 'flex';
+    buttons.style.display = 'block';
+  }
+</script>
