--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -65,15 +65,11 @@
   <audio id="beep10" src="001_ずんだもん（ノーマル）_10秒前.wav"></audio>
   <audio id="beep20" src="002_ずんだもん（ノーマル）_20びょうまえ.wav"></audio>
   <audio id="beep30" src="003_ずんだもん（ノーマル）_30びょうまえ.wav"></audio>
-  <audio id="finish" src="beep.mp3"></audio>
+  <audio id="finish" src="aaa.mp3"></audio>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script>
-    // AudioオブジェクトをHTML要素から取得
-    const beep10 = document.getElementById("beep10");
-    const beep20 = document.getElementById("beep20");
-    const beep30 = document.getElementById("beep30");
-    const finish = document.getElementById("finish");
     let timer;
     let count1;
     let count2;
@@ -106,26 +102,26 @@
           display.innerHTML = count1;
 
           if (count1 === 30) {
-            beep30.play();
+            document.getElementById("beep30").play();
           } else if (count1 === 20) {
-            beep20.play();
+            document.getElementById("beep20").play();
           } else if (count1 === 10) {
-            beep10.play();
+            document.getElementById("beep10").play();
           } else if (count1 === 0) {
-            finish.play();
+            document.getElementById("finish").play();
           }
         } else if (count2 > 0) {
           count2--;
           display.innerHTML = count2;
 
           if (count2 === 30) {
-            beep30.play();
+            document.getElementById("beep30").play();
           } else if (count2 === 20) {
-            beep20.play();
+            document.getElementById("beep20").play();
           } else if (count2 === 10) {
-            beep10.play();
+            document.getElementById("beep10").play();
           } else if (count2 === 0) {
-            finish.play();
+            document.getElementById("finish").play();
           }
         } else {
           repeat--;
