--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -102,26 +102,26 @@
           display.innerHTML = count1;
 
           if (count1 === 30) {
-            document.getElementById("beep30").play();
+            beep30.play();
           } else if (count1 === 20) {
-            document.getElementById("beep20").play();
+            beep20.play();
           } else if (count1 === 10) {
-            document.getElementById("beep10").play();
+            beep10.play();
           } else if (count1 === 0) {
-            document.getElementById("finish").play();
+            finish.play();
           }
         } else if (count2 > 0) {
           count2--;
           display.innerHTML = count2;
 
           if (count2 === 30) {
-            document.getElementById("beep30").play();
+            beep30.play();
           } else if (count2 === 20) {
-            document.getElementById("beep20").play();
+            beep20.play();
           } else if (count2 === 10) {
-            document.getElementById("beep10").play();
+            beep10.play();
           } else if (count2 === 0) {
-            document.getElementById("finish").play();
+            finish.play();
           }
         } else {
           repeat--;
