--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
   <style>
     .container {
       margin-top: 50px;
@@ -33,12 +33,6 @@
       font-weight: bold;
       margin-bottom: 30px;
     }
-    #elapsed {
-      font-size: 1rem;
-      color: #6c757d;
-      margin-bottom: 20px;
-      opacity: 0.7;
-    }
     .fa {
       font-size: 2.5rem;
       margin-right: 10px;
@@ -48,109 +42,93 @@
 <body>
   <div class="container">
     <div class="form-group">
-      <label for="seconds1" class="me-3">秒数1：</label>
-      <input id="seconds1" type="number" value="20" min="1" class="form-control me-3">
-      <label for="seconds2" class="me-3">秒数2：</label>
-      <input id="seconds2" type="number" value="10" min="1" class="form-control me-3">
-      <label for="times" class="me-3">繰り返し：</label>
+      <label for="seconds1" class="mr-3">秒数1：</label>
+      <input id="seconds1" type="number" value="20" min="1" class="form-control mr-3">
+      <label for="seconds2" class="mr-3">秒数2：</label>
+      <input id="seconds2" type="number" value="10" min="1" class="form-control mr-3">
+      <label for="times" class="mr-3">繰り返し：</label>
       <input id="times" type="number" value="8" min="1" class="form-control">
     </div>
     <div class="text-center">
-      <button id="start" class="btn btn-lg btn-primary me-3" onclick="start()"><i class="fas fa-play"></i> スタート</button>
+      <button id="start" class="btn btn-lg btn-primary mr-3" onclick="start()"><i class="fas fa-play"></i> スタート</button>
       <button id="stop" class="btn btn-lg btn-danger" onclick="stop()" disabled><i class="fas fa-stop"></i> ストップ</button>
     </div>
     <p id="display" class="text-center">0</p>
-    <p id="elapsed" class="text-center">経過時間: 0秒</p>
   </div>
-  <audio id="beep10" src="001_ずんだもん（ノーマル）_10秒前.wav"></audio>
-  <audio id="beep20" src="002_ずんだもん（ノーマル）_20びょうまえ.wav"></audio>
-  <audio id="beep30" src="003_ずんだもん（ノーマル）_30びょうまえ.wav"></audio>
-  <audio id="finish" src="aaa.mp3"></audio>
-
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+  <audio id="beep" src="beep.mp3"></audio>
+  <audio id="hato" src="aaa.mp3"></audio>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script>
+    const beep = new Audio("beep.mp3");
     let timer;
     let count1;
     let count2;
     let repeat;
-    let startTime;
-
     function start() {
-      const formGroup = document.querySelector('.form-group');
-      const buttons = document.querySelector('.text-center');
-      formGroup.style.display = 'none';
-      buttons.style.display = 'none';
-
-      const display = document.getElementById("display");
-      const seconds1 = parseInt(document.getElementById("seconds1").value);
-      const seconds2 = parseInt(document.getElementById("seconds2").value);
-      repeat = parseInt(document.getElementById("times").value);
-
-      count1 = seconds1;
-      count2 = seconds2;
+  const formGroup = document.querySelector('.form-group');
+  const buttons = document.querySelector('.text-center');
+  formGroup.style.display = 'none';
+  buttons.style.display = 'none';
+  const display = document.getElementById("display");
+  const seconds1 = parseInt(document.getElementById("seconds1").value);
+  const seconds2 = parseInt(document.getElementById("seconds2").value);
+  repeat = parseInt(document.getElementById("times").value);
+  count1 = seconds1 ;
+  count2 = seconds2 ;
+  display.innerHTML = count1;
+  timer = setInterval(() => {
+    if (count1 > 0) {
+      count1--;
       display.innerHTML = count1;
-
-      startTime = Date.now();
-
-      timer = setInterval(() => {
-        const elapsedTime = Math.floor((Date.now() - startTime) / 1000);
-        document.getElementById("elapsed").innerHTML = `経過時間: ${elapsedTime}秒`;
-
-        if (count1 > 0) {
-          count1--;
-          display.innerHTML = count1;
-
-          if (count1 === 30) {
-            beep30.play();
-          } else if (count1 === 20) {
-            beep20.play();
-          } else if (count1 === 10) {
-            beep10.play();
-          } else if (count1 === 0) {
-            finish.play();
-          }
-        } else if (count2 > 0) {
-          count2--;
-          display.innerHTML = count2;
-
-          if (count2 === 30) {
-            beep30.play();
-          } else if (count2 === 20) {
-            beep20.play();
-          } else if (count2 === 10) {
-            beep10.play();
-          } else if (count2 === 0) {
-            finish.play();
-          }
-        } else {
-          repeat--;
-          if (repeat === 0) {
-            stop();
-          } else {
-            count1 = seconds1;
-            count2 = seconds2;
-            display.innerHTML = count1;
-          }
-        }
-      }, 1000);
-
-      document.getElementById("start").disabled = true;
-      document.getElementById("stop").disabled = false;
+      if (count1 === 0) {
+        hato.play();
+      }
+    } else if (count2 > 0) {
+      count2--;
+      display.innerHTML = count2;
+      if (count2 === 0) {
+        hato.play();
+      }
+    } else {
+      
+      repeat--;
+      if (repeat === 0) {
+        stop();
+      } else {
+        count1 = seconds1 ;
+        count2 = seconds2 ;
+        display.innerHTML = count1;
+      }
     }
+  }, 1000);
+  document.getElementById("start").disabled = true;
+  document.getElementById("stop").disabled = false;
+  hato.play(); // 追加
+}
 
-    function stop() {
-      clearInterval(timer);
-      document.getElementById("start").disabled = false;
-      document.getElementById("stop").disabled = true;
-      document.getElementById("display").innerHTML = "0";
-      document.getElementById("elapsed").innerHTML = "経過時間: 0秒";
 
-      const formGroup = document.querySelector('.form-group');
-      const buttons = document.querySelector('.text-center');
-      formGroup.style.display = 'flex';
-      buttons.style.display = 'block';
-    }
-  </script>
+function stop() {
+clearInterval(timer);
+document.getElementById("start").disabled = false;
+document.getElementById("stop").disabled = true;
+document.getElementById("display").innerHTML = "0";
+
+  clearInterval(timer);
+  document.getElementById("start").disabled = false;
+  document.getElementById("stop").disabled = true;
+  document.getElementById("display").innerHTML = "0";
+
+  // カウントダウンの数字以外の要素を表示する
+  const formGroup = document.querySelector('.form-group');
+  const buttons = document.querySelector('.text-center');
+  formGroup.style.display = 'flex';
+  buttons.style.display = 'block';
+
+
+}
+</script>
+
 </body>
 </html>
