--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-　<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .container {
       margin-top: 50px;
@@ -33,9 +32,11 @@
       font-weight: bold;
       margin-bottom: 30px;
     }
-    .fa {
-      font-size: 2.5rem;
+    .icon {
+      width: 2.5rem;
+      height: 2.5rem;
       margin-right: 10px;
+      vertical-align: middle;
     }
   </style>
 </head>
@@ -50,8 +51,12 @@
       <input id="times" type="number" value="8" min="1" class="form-control">
     </div>
     <div class="text-center">
-      <button id="start" class="btn btn-lg btn-primary mr-3" onclick="start()"><i class="fas fa-play"></i> スタート</button>
-      <button id="stop" class="btn btn-lg btn-danger" onclick="stop()" disabled><i class="fas fa-stop"></i> ストップ</button>
+      <button id="start" class="btn btn-lg btn-primary mr-3" onclick="start()">
+        <svg class="icon" viewBox="0 0 384 512">
+          <path fill="currentColor" d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/>
+        </svg>
+        スタート
+      </button>
     </div>
     <p id="display" class="text-center">0</p>
   </div>
@@ -63,50 +68,47 @@
     let count2;
     let repeat;
     function start() {
-  const formGroup = document.querySelector('.form-group');
-  const buttons = document.querySelector('.text-center');
-  formGroup.style.display = 'none';
-  buttons.style.display = 'none';
-  const display = document.getElementById("display");
-  const seconds1 = parseInt(document.getElementById("seconds1").value);
-  const seconds2 = parseInt(document.getElementById("seconds2").value);
-  repeat = parseInt(document.getElementById("times").value);
-  count1 = seconds1 ;
-  count2 = seconds2 ;
-  display.innerHTML = count1;
-  timer = setInterval(() => {
-    if (count1 > 0) {
-      count1--;
+      const formGroup = document.querySelector('.form-group');
+      const buttons = document.querySelector('.text-center');
+      formGroup.style.display = 'none';
+      buttons.style.display = 'none';
+      const display = document.getElementById("display");
+      const seconds1 = parseInt(document.getElementById("seconds1").value);
+      const seconds2 = parseInt(document.getElementById("seconds2").value);
+      repeat = parseInt(document.getElementById("times").value);
+      count1 = seconds1;
+      count2 = seconds2;
       display.innerHTML = count1;
-      if (count1 === 0) {
-        hato.play();
-      }
-    } else if (count2 > 0) {
-      count2--;
-      display.innerHTML = count2;
-      if (count2 === 0) {
-        hato.play();
-      }
-    } else {
-      
-      repeat--;
-      if (repeat === 0) {
-        stop();
-      } else {
-        count1 = seconds1 ;
-        count2 = seconds2 ;
-        display.innerHTML = count1;
-      }
+      timer = setInterval(() => {
+        if (count1 > 0) {
+          count1--;
+          display.innerHTML = count1;
+          if (count1 === 0) {
+            hato.play();
+          }
+        } else if (count2 > 0) {
+          count2--;
+          display.innerHTML = count2;
+          if (count2 === 0) {
+            hato.play();
+          }
+        } else {
+          repeat--;
+          if (repeat === 0) {
+            clearInterval(timer);
+            formGroup.style.display = 'flex';
+            buttons.style.display = 'block';
+            display.innerHTML = "0";
+          } else {
+            count1 = seconds1;
+            count2 = seconds2;
+            display.innerHTML = count1;
+          }
+        }
+      }, 1000);
+      document.getElementById("start").disabled = true;
+      hato.play();
     }
-  }, 1000);
-  document.getElementById("start").disabled = true;
-  document.getElementById("stop").disabled = false;
-  hato.play(); // 追加
-}
-
-
-
-</script>
-
+  </script>
 </body>
 </html>
