--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -1,113 +1,126 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .container {
-      margin-top: 50px;
-    }
-    h1 {
-      font-size: 3rem;
-      font-weight: bold;
-    }
-    .form-group {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 30px;
-    }
-    input {
-      width: 100px;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-    }
-    button {
-      font-size: 2rem;
-      font-weight: bold;
-    }
-    #display {
-      font-size: 10rem;
-      font-weight: bold;
-      margin-bottom: 30px;
-    }
-    .icon {
-      width: 2.5rem;
-      height: 2.5rem;
-      margin-right: 10px;
-      vertical-align: middle;
-    }
-  </style>
+    <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #708090;
+        }
+        .container {
+            margin-top: 50px;
+            color: #6c6e75;
+        }
+        h1 {
+            font-size: 3rem;
+            font-weight: bold;
+            color: #6c6e75;
+        }
+        .form-group {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+        input {
+            width: 100px;
+            text-align: center;
+            font-size: 2rem;
+            font-weight: bold;
+            color: #6c6e75;
+            background-color: #708090 !important;
+        }
+        button {
+            font-size: 2rem;
+            font-weight: bold;
+            background-color: #6c6e75 !important;
+            border-color: #6c6e75 !important;
+        }
+        #display {
+            font-size: 10rem;
+            font-weight: bold;
+            margin-bottom: 30px;
+            color: #6c6e75;
+        }
+        .icon {
+            width: 2.5rem;
+            height: 2.5rem;
+            margin-right: 10px;
+            vertical-align: middle;
+        }
+        label {
+            color: #6c6e75;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="form-group">
-      <label for="seconds1" class="mr-3">秒数1：</label>
-      <input id="seconds1" type="number" value="20" min="1" class="form-control mr-3">
-      <label for="seconds2" class="mr-3">秒数2：</label>
-      <input id="seconds2" type="number" value="10" min="1" class="form-control mr-3">
-      <label for="times" class="mr-3">繰り返し：</label>
-      <input id="times" type="number" value="8" min="1" class="form-control">
+    <div class="container">
+        <div class="form-group">
+            <label for="seconds1" class="mr-3">秒数1：</label>
+            <input id="seconds1" type="number" value="20" min="1" class="form-control mr-3">
+            <label for="seconds2" class="mr-3">秒数2：</label>
+            <input id="seconds2" type="number" value="10" min="1" class="form-control mr-3">
+            <label for="times" class="mr-3">繰り返し：</label>
+            <input id="times" type="number" value="8" min="1" class="form-control">
+        </div>
+        <div class="text-center">
+            <button id="start" class="btn btn-lg btn-primary mr-3" onclick="start()">
+                <svg class="icon" viewBox="0 0 384 512">
+                    <path fill="currentColor" d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/>
+                </svg>
+                スタート
+            </button>
+        </div>
+        <p id="display" class="text-center">0</p>
     </div>
-    <div class="text-center">
-      <button id="start" class="btn btn-lg btn-primary mr-3" onclick="start()">
-        <svg class="icon" viewBox="0 0 384 512">
-          <path fill="currentColor" d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/>
-        </svg>
-        スタート
-      </button>
-    </div>
-    <p id="display" class="text-center">0</p>
-  </div>
-  <audio id="hato" src="aaa.mp3"></audio>
-  <script>
-    let timer;
-    let count1;
-    let count2;
-    let repeat;
-    function start() {
-      const formGroup = document.querySelector('.form-group');
-      const buttons = document.querySelector('.text-center');
-      formGroup.style.display = 'none';
-      buttons.style.display = 'none';
-      const display = document.getElementById("display");
-      const seconds1 = parseInt(document.getElementById("seconds1").value);
-      const seconds2 = parseInt(document.getElementById("seconds2").value);
-      repeat = parseInt(document.getElementById("times").value);
-      count1 = seconds1;
-      count2 = seconds2;
-      display.innerHTML = count1;
-      timer = setInterval(() => {
-        if (count1 > 0) {
-          count1--;
-          display.innerHTML = count1;
-          if (count1 === 0) {
-            hato.play();
-          }
-        } else if (count2 > 0) {
-          count2--;
-          display.innerHTML = count2;
-          if (count2 === 0) {
-            hato.play();
-          }
-        } else {
-          repeat--;
-          if (repeat === 0) {
-            clearInterval(timer);
-            formGroup.style.display = 'flex';
-            buttons.style.display = 'block';
-            display.innerHTML = "0";
-          } else {
+    <audio id="hato" src="aaa.mp3"></audio>
+    <script>
+        let timer;
+        let count1;
+        let count2;
+        let repeat;
+        function start() {
+            const formGroup = document.querySelector('.form-group');
+            const buttons = document.querySelector('.text-center');
+            formGroup.style.display = 'none';
+            buttons.style.display = 'none';
+            const display = document.getElementById("display");
+            const seconds1 = parseInt(document.getElementById("seconds1").value);
+            const seconds2 = parseInt(document.getElementById("seconds2").value);
+            repeat = parseInt(document.getElementById("times").value);
             count1 = seconds1;
             count2 = seconds2;
             display.innerHTML = count1;
-          }
+            timer = setInterval(() => {
+                if (count1 > 0) {
+                    count1--;
+                    display.innerHTML = count1;
+                    if (count1 === 0) {
+                        hato.play();
+                    }
+                } else if (count2 > 0) {
+                    count2--;
+                    display.innerHTML = count2;
+                    if (count2 === 0) {
+                        hato.play();
+                    }
+                } else {
+                    repeat--;
+                    if (repeat === 0) {
+                        clearInterval(timer);
+                        formGroup.style.display = 'flex';
+                        buttons.style.display = 'block';
+                        display.innerHTML = "0";
+                    } else {
+                        count1 = seconds1;
+                        count2 = seconds2;
+                        display.innerHTML = count1;
+                    }
+                }
+            }, 1000);
+            document.getElementById("start").disabled = true;
+            hato.play();
         }
-      }, 1000);
-      document.getElementById("start").disabled = true;
-      hato.play();
-    }
-  </script>
+    </script>
 </body>
 </html>
