--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -35,6 +35,10 @@
             font-weight: bold;
             background-color: #6c6e75 !important;
             border-color: #6c6e75 !important;
+            color: #708090 !important;
+        }
+        button .icon path {
+            fill: #708090;
         }
         #display {
             font-size: 10rem;
