--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -27,7 +27,7 @@
             text-align: center;
             font-size: 2rem;
             font-weight: bold;
-            color: #6c6e75;
+            color: #6c6e75 !important;
             background-color: #708090 !important;
         }
         button {
