--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -78,6 +78,9 @@
         <p id="display" class="text-center">0</p>
     </div>
     <audio id="hato" src="aaa.mp3"></audio>
+    <audio id="jyuu" src="001_ずんだもん（ノーマル）_10秒前.wav"></audio>
+    <audio id="nijyuu" src="002_ずんだもん（ノーマル）_20びょうまえ.wav"></audio>
+    <audio id="sanjyuu" src="003_ずんだもん（ノーマル）_30びょうまえ.wav"></audio>
     <script>
         let timer;
         let count1;
