--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -9,12 +9,12 @@
         }
         .container {
             margin-top: 50px;
-            color: #6c6e75;
+            color: #cbcbcb;
         }
         h1 {
             font-size: 3rem;
             font-weight: bold;
-            color: #6c6e75;
+            color: #cbcbcb;
         }
         .form-group {
             display: flex;
@@ -27,24 +27,24 @@
             text-align: center;
             font-size: 2rem;
             font-weight: bold;
-            color: #6c6e75 !important;
+            color: #cbcbcb !important;
             background-color: #708090 !important;
         }
         button {
             font-size: 2rem;
             font-weight: bold;
-            background-color: #6c6e75 !important;
-            border-color: #6c6e75 !important;
+            background-color: #cbcbcb !important;
+            border-color: #cbcbcb !important;
             color: #708090 !important;
         }
         button .icon path {
             fill: #708090;
         }
         #display {
-            font-size: 10rem;
+            font-size: 25rem;
             font-weight: bold;
-            margin-bottom: 30px;
-            color: #6c6e75;
+            margin-bottom: 10px;
+            color: #cbcbcb;
         }
         .icon {
             width: 2.5rem;
@@ -53,7 +53,7 @@
             vertical-align: middle;
         }
         label {
-            color: #6c6e75;
+            color: #cbcbcb;
         }
     </style>
 </head>
