--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -33,7 +33,7 @@
         button {
             font-size: 2rem;
             font-weight: bold;
-            background-color: #cbcbcb !important;
+            background-color: #b6b3b3 !important;
             border-color: #cbcbcb !important;
             color: #708090 !important;
         }
@@ -44,7 +44,7 @@
             font-size: 25rem;
             font-weight: bold;
             margin-bottom: 10px;
-            color: #cbcbcb;
+            color: #b6b3b3;
         }
         .icon {
             width: 2.5rem;
@@ -53,7 +53,7 @@
             vertical-align: middle;
         }
         label {
-            color: #cbcbcb;
+            color: #b6b3b3;
         }
     </style>
 </head>
@@ -81,7 +81,9 @@
     <audio id="jyuu" src="001_ずんだもん（ノーマル）_10秒前.wav"></audio>
     <audio id="nijyuu" src="002_ずんだもん（ノーマル）_20びょうまえ.wav"></audio>
     <audio id="sanjyuu" src="003_ずんだもん（ノーマル）_30びょうまえ.wav"></audio>
+    
     <script>
+        
         let timer;
         let count1;
         let count2;
