else 消してもsafariでうまく再生されなかった

--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -107,10 +107,10 @@
                     if (count1 === 30) {
                         sanjyuu.play();
                     }
-                    if (count1 === 20) {
+                    else if (count1 === 20) {
                         nijyuu.play();
                     }
-                    if (count1 === 10) {
+                    else if (count1 === 10) {
                         jyuu.play();
                     }
                     else if (count1 === 0) {
@@ -122,7 +122,7 @@
                     if (count2 === 20) {
                         nijyuu.play();
                     }
-                    if (count2 === 10) {
+                    else if (count2 === 10) {
                         jyuu.play();
                     }
                     else if (count2 === 0) {
