preloadを試してみる

--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -77,10 +77,11 @@
         </div>
         <p id="display" class="text-center">0</p>
     </div>
-    <audio id="hato" src="aaa.mp3"></audio>
-    <audio id="jyuu" src="001_ずんだもん（ノーマル）_10秒前.mp3"></audio>
-    <audio id="nijyuu" src="002_ずんだもん（ノーマル）_20びょうまえ.mp3"></audio>
-    <audio id="sanjyuu" src="003_ずんだもん（ノーマル）_30びょうまえ.mp3"></audio>
+    <audio id="hato" src="aaa.mp3" preload="auto"></audio>
+    <audio id="jyuu" src="001_ずんだもん（ノーマル）_10秒前.mp3" preload="auto"></audio>
+    <audio id="nijyuu" src="002_ずんだもん（ノーマル）_20びょうまえ.mp3" preload="auto"></audio>
+    <audio id="sanjyuu" src="003_ずんだもん（ノーマル）_30びょうまえ.mp3" preload="auto"></audio>
+
     
     <script>
         
